# nurones-mcp

./: .dockerignore  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CODEOWNERS  CONTRACTS_CICD_COMPLETE.md  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SPIRAL_1_ROADMAP.md  STATUS.md  docker-compose.yml  docker-run.sh  otel-collector-config.yaml  prometheus.yml  quickstart.sh  start-services.sh  test-extensions.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bench.yml  ci.yml  release.yml
.mcp/: config.json  context-default.json  policies.json
.mcp/tools/: completion-stream.json  db-execute.json  db-query.json  db-schema.json  embedding-generate.json  env-get.json  extract-links.json  fetch-url.json  fs-delete.json  fs-list.json  (+10 more)
admin-web/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  QUICKSTART.md  RELEASES.md  index.md
mcp-core/: Cargo.toml
mcp-core/benches/: event_throughput.rs
mcp-core/src/: config.rs  connector_virtual.rs  context.rs  contracts.rs  event_bus.rs  lib.rs  main.rs  observability.rs  policies.rs  security.rs  server_state.rs  settings.rs  tool_executor.rs  tool_wasi.rs  types.rs
mcp-core/tests/: contracts.rs
qoder-integration/: extension.json
scripts/: build-spiral1-week1.sh  run-benchmarks.sh
sdk-node/: package-lock.json  package.json  vitest.config.ts
spec/: 1_nurones_mcp_server_prd_v0-5.md
vscode-extension/: README.md  package.json
(+73 files in other folders)
